[gd_scene load_steps=3 format=3 uid="uid://cfv4bneupwa8c"]

[ext_resource type="Script" path="res://HUD/HUD.gd" id="1_0s4i2"]
[ext_resource type="FontFile" uid="uid://b7uvsnpyym2ej" path="res://fonts/retrofont.ttf" id="1_gif20"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_0s4i2")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 13.0
offset_top = 9.0
offset_right = 141.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("1_gif20")
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="HighScoreLabel" type="Label" parent="."]
offset_left = 943.0
offset_top = 6.0
offset_right = 1145.0
offset_bottom = 37.0
theme_override_fonts/font = ExtResource("1_gif20")
theme_override_font_sizes/font_size = 24
text = "High Score: 0"
horizontal_alignment = 2

[node name="Button" type="Button" parent="."]
offset_left = 455.0
offset_top = 391.0
offset_right = 673.0
offset_bottom = 441.0
theme_override_fonts/font = ExtResource("1_gif20")
theme_override_font_sizes/font_size = 24
text = "Press to Play"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
